error correction in cart

--- a/checkout.html
+++ b/checkout.html
@@ -44,7 +44,9 @@
 
       <div class="checkout-grid">
 
-        <div class="order-summary js-order-summary"> </div>
+        <div class="order-summary js-order-summary"> 
+          <!-- product container here  -->
+        </div>
 
         <div class="payment-summary">
           <div class="payment-summary-title">
