--- a/checkout.html
+++ b/checkout.html
@@ -48,8 +48,8 @@
           <!-- product container here  -->
         </div>
 
-        <div class="payment-summary">
-          <div class="payment-summary-title">
+        <div class="payment-summary js-payment-summary">
+          <!-- <div class="payment-summary-title">
             Order Summary
           </div>
 
@@ -80,7 +80,7 @@
 
           <button class="place-order-button button-primary">
             Place your order
-          </button>
+          </button> -->
         </div>
       </div>
     </div>
